# urls_to_zip

./: pyproject.toml  readme.md  sample_archive.json
tests/: test_urls_to_zip_test.py
urls_to_zip_test/: main.py
