[tool.poetry]
name = "urls_to_zip_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp_cors = "^0.7.0"
aiohttp = "^3.6"
requests = "^2.22"
aiojobs = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
